Athkar was added

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -5,6 +5,7 @@
     <string name="quran">القرآن</string>
     <string name="hadeeth">الأحاديث</string>
     <string name="sebha">السبحة</string>
+    <string name="athkar">الأذكار</string>
     <string name="radio">الراديو</string>
     <string name="sura_name">اسم السورة</string>
     <string name="ayah_numbers">عدد الآيات</string>
