--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="quran">quran</string>
     <string name="hadeeth">hadeeth</string>
     <string name="sebha">sebha</string>
+    <string name="athkar">Athkar</string>
     <string name="radio">radio</string>
     <string name="sura_name">Sura Name</string>
     <string name="ayah_numbers">ayah numbers</string>
@@ -14,4 +15,6 @@
     <string name="hadeeth_number"> Hadeeth Number</string>
     <string name="quran_radio_station">Quran Radio Station</string>
     <string name="TODO"> TODO</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
